2015-04-03 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai.h: insert dummy rt_mount_rtai and rt_umount_rtai 
	  to make comedi making happy.

2015-03-25 Shahbaz Youssefi <shabbyx@gmail.com>

        * rtai-py/rtai_lxrt.py: fixed nam2num and num2nam typos, argstype
          used in place argtypes.

2015-03-22 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/sched/sys.c: revised lxrt_invoke, argument list and catching 
	  Linux signal at entering moved to syscall interception in sched.c.
	* base/sched/sched.c: revised linux signal wakeup and RTAI-Linux
	  syscalls intercpting.

2015-03-19 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/hal/hal.c: omit argument in macros 
	  "...fast_flush_pipeline", not needed any more and return though linux
	  after intercepting syscalls, theu can never be in hard real time
	  without the scheduler.
	* base/include/rtai_schedcore.h: make TASK_HARDREALTIME and 
	  TASK_RTAISRVSLEEP as TASK_INTERRUPTIBLE.
	* base/include/asm-x86/rtai_lxrt.h: experiment with the possibility of 
	* base/sched/api.c: split the function rt_task_masked_unblock in a
	  basic unprotected function, to be used in specifically protected 
	  forms, both in api.c and wherever it is needed.

2015-03-17 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/ipc/msg/msg.c: improve the check of the sending task in
	  rt_Receive.

2015-03-06 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/hal/hal.c: type rtai_hirq_dispatcher as void, no
	  return value used by the function calling it.
	* base/sched/sched.c: removed the unused code related to the old way
	  of using a list of tasks to transition to hardmode
	  (lxrt_intercept_schedule_tail).

2015-03-04 Pierangelo Masarati <pierangelo.masarati@polimi.it>

	* configure.in, configure: revised to support self calibration and
	  revised configuration paraeters.
	* base/sched/selfcalibrate.sh: added to support self calibration.